@@ -1,3 +1,12 @@
+2008-11-13  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/entry.py:
+	* kiwi/ui/entrycompletion.py:
+	When the value of the ComboEntry changes, the object is not updated
+	sometimes. Fixes Bug 3673
+
 2008-11-07  Ronaldo Maia  <romaia@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
